# speedy

./: .gitignore  Cargo.toml  README.md  README_Windows.md  README_zh-CN.md
.github/app-bundle/Speedy.app/Contents/: Info.plist
.github/app-bundle/Speedy.app/Contents/MacOS/: README.txt
.github/workflows/: build.yml  ci.yml
src/: main.rs  network_linux.rs  network_monitor.rs  network_windows.rs
