[package]
name = "speedy"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.32", default-features = false, features = ["wgpu", "default_fonts"] }
egui = "0.32"
sysinfo = "0.30"
wgpu = { version = "25.0", features = ["dx12", "vulkan"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_System_Registry",
    "Win32_Networking_WinSock",
] }
