[package]
name = "speedy"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.30"

[target.'cfg(not(windows))'.dependencies]
eframe = { version = "0.28", default-features = false, features = ["glow", "default_fonts"] }
egui = "0.28"

[target.'cfg(windows)'.dependencies]
eframe = { version = "0.28", default-features = false, features = ["wgpu", "default_fonts"] }
egui = "0.28"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_System_Registry",
    "Win32_Networking_WinSock",
] }
